Done - get file

--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
 <script src="http://cdn-na.infragistics.com/igniteui/latest/js/modules/infragistics.xml.js"></script>
 <script src="http://cdn-na.infragistics.com/igniteui/latest/js/modules/infragistics.documents.core_openxml.js"></script>
 <script src="http://cdn-na.infragistics.com/igniteui/latest/js/modules/infragistics.excel_serialization_openxml.js"></script>
-<link href="http://cdn-na.infragistics.com/igniteui/latest/2016.2/latest/css/themes/infragistics/infragistics.theme.css" rel="stylesheet"></link>
-<link href="http://cdn-na.infragistics.com/igniteui/latest/2016.2/latest/css/structure/infragistics.css" rel="stylesheet"></link>
+<link href="http://cdn-na.infragistics.com/igniteui/latest/2016.2/latest/css/themes/infragistics/infragistics.theme.css"
+      rel="stylesheet"></link>
+<link href="http://cdn-na.infragistics.com/igniteui/latest/2016.2/latest/css/structure/infragistics.css"
+      rel="stylesheet"></link>
 <script src="readExcel.js"></script>
 
 <div>
     <ol>
-        <li>Download this <a href="http://igniteui.com/HtmlSamples/javascript-excel-library/report.xlsx" download="">sample  Excel file</a></li>
         <li>Click Choose File/Browse button below and pick the sample Excel file or another excel file.</li>
     </ol>
-    <input type="file" id="input" accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"></input>
+    <input type="file" id="input"
+           accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"/>
     <div id="result"></div>
     <table id="grid1"></table>
 </div>
