--- a/test.html
+++ b/test.html
@@ -28,3 +28,7 @@ https://www.linkedin.com/voyager/api/identity/profiles/tu%E1%BA%A5n-nguy%E1%BB%8
 ---------
 https://www.linkedin.com/in/t%C3%BAy-h%E1%BB%93-nguy%E1%BB%85n-qu%E1%BB%91c-031861a4/%7B%22value%22:%22
 https://www.linkedin.com/dms/C5100AQHAMDssDrmTMw/profile-profilePdf/0?m=367667054&e=1513053668&v=alpha&t=f6H2yC4gNXvGwW4VK6NkMrxBqwRCes41gmsC-o0hwEY%22}
+D:\Note_ticket\VHRS_327\testData
+
+window.open('file:///D:/Note_ticket/VHRS_327/testData/profileId.xlsx')
+document.load('file:///D:/personal/RRTool/index.html')
